[package]
name = "illustrators_support"
version = "0.1.0"
edition = "2021"
author=["Frozen String"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rust-crypto = "^0.2"
chrono = {version="0.4",features=["serde"]}

# data base crate
[dependencies.sea-orm]
version="^0"
default-features = false
features=[
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print"
]

#web server crate
[dependencies.rocket]
version="0.5.0-rc.1"
features=[
    "secrets",
    "json"
]

# serilze deserilze crate
[dependencies.serde]
version= "1.0.130"
features=["derive"]

[dependencies.serde_json]
version = "1.0.68"

#regex
[dependencies.regex]
version = "1.5"
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std","unicode-perl"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"] 
